update flag links, lists and models

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -76,5 +76,7 @@
   "group.category.null": "No category",
   "group.category.all": "All posts",
 
+  "group.post.menu.title": "Category menu",
+
   "sharebox.label.text": "Click here to write or share something"
 }
