--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -76,5 +76,7 @@
   "group.category.null": "Sem categoria",
   "group.category.all": "Todos posts",
 
+  "group.post.menu.title": "Menu",
+
   "sharebox.label.text": "Clique aqui para escrever ou compartilhar algo"
 }
