--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -78,5 +78,6 @@
 
   "group.post.menu.title": "Category menu",
 
-  "sharebox.label.text": "Click here to write or share something"
+  "sharebox.label.text": "Click here to write or share something",
+  "posts.news.count": " new posts. Click here to show."
 }
