add posts.news.count locale

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -78,5 +78,6 @@
 
   "group.post.menu.title": "Menu",
 
-  "sharebox.label.text": "Clique aqui para escrever ou compartilhar algo"
+  "sharebox.label.text": "Clique aqui para escrever ou compartilhar algo",
+  "posts.news.count": " novos conteúdos. Clique aqui para exibi-los."
 }
