--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -79,5 +79,15 @@
   "group.post.menu.title": "Category menu",
 
   "sharebox.label.text": "Click here to write or share something",
-  "posts.news.count": " new posts. Click here to show."
+  "posts.news.count": " new posts. Click here to show.",
+  "group.post.find": "post",
+
+  "post.search.query": "Search",
+  "post.objectType.null": "All types",
+  "post.objectType.text": "Text",
+  "post.objectType.image": "Image",
+  "post.objectType.link": "Link",
+  "post.objectType.file": "File",
+  "post.objectType.multimedia": "Multimedia",
+  "post.objectType.submit": "Submit"
 }
