--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -79,5 +79,15 @@
   "group.post.menu.title": "Menu",
 
   "sharebox.label.text": "Clique aqui para escrever ou compartilhar algo",
-  "posts.news.count": " novos conteúdos. Clique aqui para exibi-los."
+  "posts.news.count": " novos conteúdos. Clique aqui para exibi-los.",
+  "group.post.find": "postagem",
+
+  "post.search.query": "Busca",
+  "post.objectType.null": "Todos tipos",
+  "post.objectType.text": "Texto",
+  "post.objectType.image": "Imagem",
+  "post.objectType.link": "Link",
+  "post.objectType.file": "Arquivo",
+  "post.objectType.multimedia": "Multimídia",
+  "post.objectType.submit": "Buscar"
 }
