--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -10,6 +10,7 @@
   "post.unhighlight": "unhighlight",
   "post.findOne": "post",
   "post.edit": "Edit post",
+  "post.category.label": "Category",
 
   "form-post-title": "Title",
   "form-helper-post-title": "Title or subject about your post (optional)",
@@ -130,5 +131,7 @@
   "post.file.create.notification.inGroup.title": "<a href='{{actorURL}}'>{{actor.displayName}}</a> send one file in <a href='{{groupURL}}'>{{group.name}}</a> group",
 
   "post.file.create.notification.title.withTitle": "<a href='{{actorURL}}'>{{actor.displayName}}</a> send the <a href='{{recordURL}}'>{{record.title}}</a> file",
-  "post.file.create.notification.inGroup.title.withTitle": "<a href='{{actorURL}}'>{{actor.displayName}}</a> send the file  <a href='{{recordURL}}'>{{record.title}}</a> in <a href='{{groupURL}}'>{{group.name}}</a> group"
+  "post.file.create.notification.inGroup.title.withTitle": "<a href='{{actorURL}}'>{{actor.displayName}}</a> send the file  <a href='{{recordURL}}'>{{record.title}}</a> in <a href='{{groupURL}}'>{{group.name}}</a> group",
+
+  "membershipinvite.find.my.empty": "You dont have new group invites"
 }
