add group menu in new groups

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -137,5 +137,7 @@
 
   "group.membershipinvite.subject.email": "{{inviter.displayName}} invited you to {{group.name}} group",
 
-  "group.join.success": "Now you are member of {{group.name}} group"
+  "group.join.success": "Now you are member of {{group.name}} group",
+
+  "group.menu.title": "Menu"
 }
