--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -145,6 +145,7 @@
 
 
   "group.member.remove.manager.role": "Remove from managers",
-  "group.member.add.manager.role": "Set as manager"
+  "group.member.add.manager.role": "Set as manager",
 
+  "group.member.leave.last.member": "You cant leave this group because you are the last manager"
 }
